merge: unificando repositório local e remoto

--- a/ControleDeClientes/appsettings.json
+++ b/ControleDeClientes/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ControleClientes;Username=postgres;Password=123"
+    "DefaultConnection": "Host=;Port=;Database=;Username=;Password="
   }
 }
